Change Font Family

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     href="https://fonts.googleapis.com/css2?family=Biryani:wght@400;700&family=Kenia&family=Langar&family=Montserrat:wght@100;400;900&family=Outfit:wght@400;900&family=Sofadi+One&display=swap"
     rel="stylesheet">
 
+  <!-- Other Fonts -->
   <link href="https://db.onlinewebfonts.com/c/c069e8e801b8222372b276c6310249c2?family=Gyahegi-PersonalUse"
     rel="stylesheet">
   <link href="https://db.onlinewebfonts.com/c/893fdce7fe8ecb381f012ce2edd2dd6c?family=against-Regular" rel="stylesheet">
+  <link href="https://db.onlinewebfonts.com/c/95a6b13dbf2fd94d57441cc94f615a2f?family=Midorima+-+Personal+Use+Regular"
+    rel="stylesheet">
 
   <!-- Jquery -->
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -48,7 +51,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom">
           <div class="container-fluid">
             <img class="logo" style="background-color: #141129; width: 60px; height: 60px;" src="images/logo.png">
-            <a class="navbar-brand" href="#">E-nstruments</a>
+            <a class="navbar-brand" href="#">E-NSTRUMENTS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
               aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -121,67 +124,6 @@
 
   </section>
 
-  <!--<section id="instruments">
-
-    <h1 style="text-align: center; color: white;"><br><strong>Instruments</strong></h1>
-
-     <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4">
-      <div class="col">
-        <div class="col1">
-          <a href="./instruments/drum.html"><img src="images/drum.png" class="instrument card-img-top" alt=""></a>
-          <h3 class="inst-text">Drum</h3>
-        </div>
-      </div>
-      <div class="col">
-        <div class="col1">
-          <a href="./instruments/xylophone.html"><img src="images/xylophone.png" class="instrument card-img-top"
-              alt=""></a>
-          <h3 class="inst-text">Xylophone</h3>
-        </div>
-      </div>
-      <div class="col">
-        <div class="col1">
-          <a href="./instruments/piano.html"><img src="images/keyboard.png" class="instrument card-img-top" alt=""></a>
-          <h3 class="inst-text">Piano</h3>
-        </div>
-      </div>
-      <div class="col">
-        <div class="col1">
-          <a href=""><img src="images/bass-guitar.png" class="instrument card-img-top" alt=""></a>
-          <h3 class="inst-text">Bass-Guitar</h3>
-        </div>
-      </div>
-    </div>
-
-    <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4">
-      <div class="col">
-        <div class="col1">
-          <a href="./instruments/guitar.html"><img src="images/guitar.png" class="instrument card-img-top" alt=""></a>
-          <h3 class="inst-text">Guitar</h3>
-        </div>
-      </div>
-      <div class="col">
-        <div class="col1">
-          <a href=""><img src="images/bongo.png" class="instrument card-img-top" alt=""></a>
-          <h3 class="inst-text">Bongo</h3>
-        </div>
-      </div>
-      <div class="col">
-        <div class="col1">
-          <a href=""><img src="images/sitar.png" class="instrument card-img-top" alt=""></a>
-          <h3 class="inst-text">Sitar</h3>
-        </div>
-      </div>
-      <div class="col">
-        <div class="col1">
-          <a href="./instruments/pan-flute.html"><img src="images/pan-flute.png" class="instrument card-img-top"
-              alt=""></a>
-          <h3 class="inst-text">Pan-Flute</h3>
-        </div>
-      </div>
-    </div>
-
-  </section> -->
   <section id="selection">
     <h1 class="big glow" style="text-align: center; padding-bottom: 20px ; padding-top: 5px;">INSTRUMENTS</h1>
     <div class="container">
@@ -208,13 +150,13 @@
       </div>
       <div class="player">
         <div class="upper-part">
-          <div class="play-icon">
+          <!-- <div class="play-icon">
             <svg width="20" height="20" fill="#fff" stroke="#fff" stroke-linecap="round" stroke-linejoin="round"
               stroke-width="2" class="feather feather-play" viewBox="0 0 24 24">
               <defs />
               <path d="M5 3l14 9-14 9V3z" />
             </svg>
-          </div>
+          </div> -->
           <div class="info-area" id="test">
             <label class="song-info" id="song-info-1">
               <div class="title"><a class="title" href="./instruments/guitar.html">Guitar</a></div>
