--- a/instruments/drum.html
+++ b/instruments/drum.html
@@ -20,6 +20,13 @@
     href="https://fonts.googleapis.com/css2?family=Biryani:wght@400;700&family=Bruno+Ace+SC&family=Merriweather&family=Montserrat:wght@100;400;900&family=Outfit:wght@400;900&family=Ubuntu:wght@400;700&display=swap"
     rel="stylesheet">
 
+  <!-- Other Fonts -->
+  <link href="https://db.onlinewebfonts.com/c/c069e8e801b8222372b276c6310249c2?family=Gyahegi-PersonalUse"
+    rel="stylesheet">
+  <link href="https://db.onlinewebfonts.com/c/893fdce7fe8ecb381f012ce2edd2dd6c?family=against-Regular" rel="stylesheet">
+  <link href="https://db.onlinewebfonts.com/c/95a6b13dbf2fd94d57441cc94f615a2f?family=Midorima+-+Personal+Use+Regular"
+    rel="stylesheet">
+
   <!-- CSS -->
   <link href="./instrument-styles/drum.css" rel="stylesheet" />
 </head>
@@ -32,7 +39,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-body-tertiary py-lg-0 py-md-2 py-sm-4 navbar-custom">
           <div class="container-fluid">
             <img class="logo" style="background-color: #141129; width: 60px; height: 60px" src="../images/logo.png" />
-            <a class="navbar-brand" href="../index.html">E-nstruments</a>
+            <a class="navbar-brand" href="../index.html">E-NSTRUMENTS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
               aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -71,9 +78,11 @@
 
   <section id="instrument">
     <div class="play">
-      <h1>
-        Play <strong>Drums</strong> On
-        <strong>E-nstruments</strong>!
+      <h1 class="big">
+        P<strong class="small">LAY</strong>
+        D<strong class="small">RUMS</strong>
+        O<strong class="small">N</strong><br>
+        E<strong class="small">-NSTRUMENTS</strong>!
       </h1>
       <div class="position-relative glass">
         <img class="responsive-img" src="../images/drumset/main4.png" alt="drum-set" />
@@ -122,7 +131,7 @@
 
 <footer>
   <hr>
-  <h6 class="footer">built by <a class="title" href="https://github.com/ManasJhaMJ">MJ10</a><br><br>Designed by <a
+  <h6 class="footer">Built by <a class="title" href="https://github.com/ManasJhaMJ">MJ10</a><br><br>Designed by <a
       href="https://github.com/YS7Creates">YS7</a></h6>
 </footer>
 
