--- a/instruments/drum.html
+++ b/instruments/drum.html
@@ -47,7 +47,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="./index.html">Home</a>
+                  <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <div class="dropdown">
