Change Font family and colour

--- a/instruments/drum.html
+++ b/instruments/drum.html
@@ -78,11 +78,8 @@
 
   <section id="instrument">
     <div class="play">
-      <h1 class="big">
-        P<strong class="small">LAY</strong>
-        D<strong class="small">RUMS</strong>
-        O<strong class="small">N</strong><br>
-        E<strong class="small">-NSTRUMENTS</strong>!
+      <h1 class="small">PLAY <br>
+        <strong class="big">DRUMS</strong>
       </h1>
       <div class="position-relative glass">
         <img class="responsive-img" src="../images/drumset/main4.png" alt="drum-set" />
@@ -105,10 +102,10 @@
   </section>
 
   <div class="info">
-    <h1>How to play drums online?</h1>
-    <p>
+    <h1>HOW TO PLAY DRUMS ONLINE?</h1>
+    <p style="color: white;">
       Use your computer keyboard or click the drum kit to play the virtual drums. You can use the following shortcuts:
-    <ul>
+    <ul style="color: white;">
       <li>Crash cymbal : <strong>y</strong></li>
       <li>Ride cymbal : <strong>u</strong></li>
       <li>Hi-hat (closed) : <strong>r</strong></li>
@@ -121,8 +118,11 @@
       <li>Snare drum (cross stick) : <strong>d</strong></li>
       <li>Bass drum : <strong>x</strong></li>
     </ul>
-    Drummers often use their right hand to play the cymbals (crash cymbal, ride cymbal, and hi-hat), and their left hand
-    to play the snare drum. When using shortcuts, use the left hand to play both the snare drum and the bass drum.
+    <p style="color: #FF29C3;">Drummers often use their right hand to play the cymbals (crash cymbal, ride cymbal, and
+      hi-hat), and their left
+      hand
+      to play the snare drum. When using shortcuts, use the left hand to play both the snare drum and the bass drum.
+    </p>
     </p>
   </div>
 </body>
