--- a/instruments/guitar.html
+++ b/instruments/guitar.html
@@ -81,11 +81,8 @@
 
     <section id="instrument">
         <div class="play">
-            <h1 class="big">
-                P<strong class="small">LAY</strong>
-                G<strong class="small">UITAR</strong>
-                O<strong class="small">N</strong><br>
-                E<strong class="small">-NSTRUMENTS</strong>!
+            <h1 class="small">PLAY <br>
+                <strong class="big">GUITAR</strong>
             </h1>
             <div class="position-relative glass">
                 <img class="responsive-img" src="../images/guitar/fretboard1.png" alt="drum-set" />
@@ -107,11 +104,11 @@
     </section>
 
     <div class="info">
-        <h1>How to play Guitar online?</h1>
-        <p>
+        <h1>HOW TO PLAY GUITAR ONLINE?</h1>
+        <p style="color: white;">
             Use your computer keyboard or click the guitar to play the virtual guitar. You can use the following
             shortcuts:
-        <ul>
+        <ul style="color: white;">
             <p>Strings : Use keyboard shortcuts or simply click to play!</p>
             <li>1st string : use e</li>
             <li>2nd string : use b</li>
@@ -128,7 +125,7 @@
             <li>E chord : use 4</li>
             <li>Adding more soon!</li>
         </ul>
-        Share your experience or request to add more on our mail !
+        <p style="color: #FF29C3;;">Share your experience or request to add more on our mail !</p>
         </p>
     </div>
 </body>
