--- a/instruments/pan-flute.html
+++ b/instruments/pan-flute.html
@@ -81,11 +81,8 @@
 
     <section id="instrument">
         <div class="play">
-            <h1 class="big">
-                P<strong class="small">LAY</strong>
-                P<strong class="small">AN-FLUTE</strong>
-                O<strong class="small">N</strong> <br>
-                E<strong class="small">-NSTRUMENTS</strong>!
+            <h1 class="small">PLAY <br>
+                <strong class="big">PAN-FLUTE</strong>
             </h1>
             <div class="position-relative glass">
                 <img class="eclipse" src="../images/drumset/Eclipse.png" />
@@ -112,11 +109,11 @@
     </section>
 
     <div class="info">
-        <h1>How to play Pan-Flute online?</h1>
-        <p>
+        <h1>HOW TO PLAY PAN-FLUTE ONLINE?</h1>
+        <p style="color: white;">
             Use your computer keyboard or click the pan-flute to play the virtual pan-flute. You can use the following
             shortcuts:
-        <ul>
+        <ul style="color: white;">
             <br>
             <p>First alphabet row (Q to I) :</p>
             <li>Pipe 1 : use q</li>
@@ -137,7 +134,7 @@
             <li>Pipe 14 : use h</li>
             <li>Pipe 15 : use j</li>
         </ul>
-        Share your experience or request to add more on our mail !
+        <p style="color: #FF29C3;">Share your experience or request to add more on our mail !</p>
         </p>
     </div>
 </body>
