--- a/instruments/piano.html
+++ b/instruments/piano.html
@@ -81,11 +81,8 @@
 
     <section id="instrument">
         <div class="play">
-            <h1 class="big">
-                P<strong class="small">LAY</strong>
-                P<strong class="small">IANO</strong>
-                O<strong class="small">N</strong><br>
-                E<strong class="small">-NSTRUMENTS</strong>!
+            <h1 class="small">PLAY <br>
+                <strong class="big">PIANO</strong>
             </h1>
             <div class="position-relative glass">
                 <img class="responsive-img" src="../images/piano/piano.png" alt="piano" />
@@ -133,17 +130,18 @@
     </section>
 
     <div class="info">
-        <h1>How to play Piano online?</h1>
-        <p>
+        <h1>HOW TO PLAY PIANO ONLINE?</h1>
+        <p style="color: white;">
             Use your computer keyboard or click the piano keys to play the piano.
 
-        <ul>
+        <ul style="color: white;">
             <li>Black keys : Use the number rows and first alphabet row (from q to t) to play the black keys of the
                 piano
                 or simply click the buttons to play them!</li>
             <li>White keys : Use the second alphabet row (from a to ') and the third alphabet row (from z to /) to play
                 the white keys of the piano or simply click the buttons to play! </li>
         </ul>
+        <p style="color: #FF29C3;">To add more instruments or for feedback please contact us on our mail!</p>
         </p>
     </div>
 </body>
