--- a/instruments/xylophone.html
+++ b/instruments/xylophone.html
@@ -81,11 +81,8 @@
 
     <section id="instrument">
         <div class="play">
-            <h1 class="big">
-                P<strong class="small">LAY</strong>
-                X<strong class="small">YLOPHONE</strong>
-                O<strong class="small">N</strong><br>
-                E<strong class="small">-NSTRUMENTS</strong>!
+            <h1 class="small">PLAY <br>
+                <strong class="big">XYLOPHONE</strong>
             </h1>
             <div class="position-relative glass">
                 <img class="responsive-img" src="../images/xylophone/xylophone2.png" alt="drum-set" />
@@ -110,11 +107,11 @@
     </section>
 
     <div class="info">
-        <h1>How to play Xylophone online?</h1>
-        <p>
+        <h1>HOW TO PLAY XYLOPHONE ONLINE?</h1>
+        <p style="color: white;">
             Use your computer keyboard or click the pan-flute to play the virtual xylophone. You can use the following
             shortcuts:
-        <ul>
+        <ul style="color: white;">
             <br>
             <p>First alphabet row (Q to U) :</p>
             <li>C3 : use q</li>
@@ -133,7 +130,7 @@
             <li>G4 : use g</li>
             <li>A5 : use h</li>
         </ul>
-        Share your experience or request to add more on our mail !
+        <p style="color: #FF29C3;">Share your experience or request to add more on our mail !</p>
         </p>
     </div>
 </body>
