change font weight

--- a/instruments/drum.html
+++ b/instruments/drum.html
@@ -102,7 +102,7 @@
   </section>
 
   <div class="info">
-    <h1>HOW TO PLAY DRUMS ONLINE?</h1>
+    <h1 style="font-weight: 600;">HOW TO PLAY DRUMS ONLINE?</h1>
     <p style="color: white;">
       Use your computer keyboard or click the drum kit to play the virtual drums. You can use the following shortcuts:
     <ul style="color: white;">
