--- a/instruments/guitar.html
+++ b/instruments/guitar.html
@@ -104,7 +104,7 @@
     </section>
 
     <div class="info">
-        <h1>HOW TO PLAY GUITAR ONLINE?</h1>
+        <h1 style="font-weight: 600;">HOW TO PLAY GUITAR ONLINE?</h1>
         <p style="color: white;">
             Use your computer keyboard or click the guitar to play the virtual guitar. You can use the following
             shortcuts:
