--- a/instruments/pan-flute.html
+++ b/instruments/pan-flute.html
@@ -109,7 +109,7 @@
     </section>
 
     <div class="info">
-        <h1>HOW TO PLAY PAN-FLUTE ONLINE?</h1>
+        <h1 style="font-weight: 600;">HOW TO PLAY PAN-FLUTE ONLINE?</h1>
         <p style="color: white;">
             Use your computer keyboard or click the pan-flute to play the virtual pan-flute. You can use the following
             shortcuts:
