--- a/instruments/piano.html
+++ b/instruments/piano.html
@@ -130,7 +130,7 @@
     </section>
 
     <div class="info">
-        <h1>HOW TO PLAY PIANO ONLINE?</h1>
+        <h1 style="font-weight: 600;">HOW TO PLAY PIANO ONLINE?</h1>
         <p style="color: white;">
             Use your computer keyboard or click the piano keys to play the piano.
 
