--- a/instruments/xylophone.html
+++ b/instruments/xylophone.html
@@ -107,7 +107,7 @@
     </section>
 
     <div class="info">
-        <h1>HOW TO PLAY XYLOPHONE ONLINE?</h1>
+        <h1 style="font-weight: 600;">HOW TO PLAY XYLOPHONE ONLINE?</h1>
         <p style="color: white;">
             Use your computer keyboard or click the pan-flute to play the virtual xylophone. You can use the following
             shortcuts:
